split further fixed and percent row height calculation, bug 153995 patch by Rick.Ju@sun.com r=karnaze sr=bzbarsky